--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav>
             <a href="">Home</a>
             <a href="">Profile</a>
-            <a href="./about.html">About</a>
+            <a href="">About</a>
         </nav>
         <section>
             <div class="box">
